downgrade java version to lts 21